add presentation and speed up heuristics

--- a/experiment_paper/experiments/speed_up_heuristics/subset_flow_running_time_m2_ibfs.tex
+++ b/experiment_paper/experiments/speed_up_heuristics/subset_flow_running_time_m2_ibfs.tex
@@ -1,3 +1,5 @@
 \KaHyPar{CA} & 29.26 & 343.40 & 21.57 & 36.44 & 56.49 & 58.75 & 11.31\\ 
-\KaHyParConfig{MF}{R1,R2} & 57.60 & 492.24 & 45.81 & 75.43 & 111.43 & 101.80 & 23.45\\ 
-\KaHyParConfig{MF}{R1,R2,R3} & 50.28 & 451.82 & 38.16 & 64.78 & 96.46 & 89.70 & 20.70\\ 
+\KaHyPar{MF} & 72.30 & 595.69 & 66.87 & 96.09 & 150.17 & 126.87 & 27.66\\ 
+\KaHyParConfig{MF}{R1} & 63.15 & 515.61 & 53.57 & 81.27 & 124.68 & 114.27 & 25.19\\ 
+\KaHyParConfig{MF}{R1,R2} & 57.78 & 495.94 & 45.96 & 75.53 & 112.35 & 101.28 & 23.58\\ 
+\KaHyParConfig{MF}{R1,R2,R3} & 50.49 & 451.99 & 38.41 & 65.01 & 97.32 & 89.84 & 20.78\\ 
