--- a/experiment_paper/experiments/speed_up_heuristics/heuristic_table_m2_ibfs.tex
+++ b/experiment_paper/experiments/speed_up_heuristics/heuristic_table_m2_ibfs.tex
@@ -1,3 +1,5 @@
 \KaHyPar{CA} & 7077.20 & 6820.17 & \multicolumn{1}{c}{-} & 29.26 \\ 
-\KaHyParConfig{MF}{R1,R2} & -2.40 & -2.05 & 28.34 & 57.60 \\ 
-\KaHyParConfig{MF}{R1,R2,R3} & -2.41 & -2.04 & 21.02 & 50.28 \\ 
+\KaHyPar{MF} & -2.47 & -2.12 & 43.04 & 72.30 \\ 
+\KaHyParConfig{MF}{R1} & -2.41 & -2.06 & 33.89 & 63.15 \\ 
+\KaHyParConfig{MF}{R1,R2} & -2.40 & -2.05 & 28.52 & 57.78 \\ 
+\KaHyParConfig{MF}{R1,R2,R3} & -2.41 & -2.06 & 21.23 & 50.49 \\ 
