slides for optimized source and sink set modeling and MBMC+

--- a/presentation/concept/concept.tex
+++ b/presentation/concept/concept.tex
@@ -83,12 +83,12 @@ Karlsruhe Institute of Technology (KIT), Karlsruhe, Germany.
 \section{Framework}
 
 \begin{todolist}
-\item High-level overview of framework (Mixed with related work)
+\item[\done] High-level overview of framework (Mixed with related work)
     \begin{todolist}
-    \item \emph{Active Block Scheduling}
-    \item Build region around cut + \emph{Adaptive Flow Iterations}
-    \item Solve flow problem on a hypergraph flow network
-    \item \emph{Most Balanced Minimum Cut}
+    \item[\done] \emph{Active Block Scheduling}
+    \item[\done] Build region around cut + \emph{Adaptive Flow Iterations}
+    \item[\done] Solve flow problem on a hypergraph flow network
+    \item[\done] \emph{Most Balanced Minimum Cut}
     \end{todolist}
 \item[\done] Flow Networks
     \begin{todolist}
@@ -100,7 +100,7 @@ Karlsruhe Institute of Technology (KIT), Karlsruhe, Germany.
     \end{todolist}
 \item Flow Problem Configuration 
     \begin{todolist}
-    \item Modeling of Sanders and Schulz
+    \item[\done] Modeling of Sanders and Schulz
     \item Optimized modeling approach
     \end{todolist}
 \item Flow Algorithms
