--- a/presentation/concept/concept.tex
+++ b/presentation/concept/concept.tex
@@ -98,10 +98,10 @@ Karlsruhe Institute of Technology (KIT), Karlsruhe, Germany.
     \item[\done] Heuer Network
     \item[\done] Hybrid Network
     \end{todolist}
-\item Flow Problem Configuration 
+\item[\done] Flow Problem Configuration 
     \begin{todolist}
     \item[\done] Modeling of Sanders and Schulz
-    \item Optimized modeling approach
+    \item[\done] Optimized modeling approach
     \end{todolist}
 \item Flow Algorithms
     \begin{todolist}
@@ -110,7 +110,7 @@ Karlsruhe Institute of Technology (KIT), Karlsruhe, Germany.
     \item \BoykovKolmogorov
     \item \IBFS
     \end{todolist}
-\item MBMC on hypergraphs
+\item[\done] MBMC on hypergraphs
 \item Integration into \emph{KaHyPar}
     \begin{todolist}
     \item Flow Execution Policy
